1.加入了maven  将之前项目改造成了支持maven 2.稍微修改了demo的目录结构